--- a/admin-content/finance.tex
+++ b/admin-content/finance.tex
@@ -1,4 +1,5 @@
 \subsection{Budget}
+The budget was created from the individual subsystem BOM. The BOMs for each subsystem can be found in the respective part selection section. The budget is broken down into the 4 subsystems as well as on miscellaneous section for the physical bed. 
 \begin{table}[H]
     \centering
     \begin{tabularx}{.8\textwidth}
