--- a/admin-content/milestones.tex
+++ b/admin-content/milestones.tex
@@ -39,8 +39,9 @@ Our team has decided to utilize the Agile approach for this project. We chose th
 \end{itemize}
 
 \subsection{Progress}
-
+In the following two sections the team will discuss the progress made in each of the two semesters.
 \subsubsection{Senior Design I}
+Senior Design I was a culture shock for the team. Looking back at the eli\textsuperscript{2} training, the team took a long time to form, and almost the rest of the semester to storm, only to finally start norming and performing at the end of the semester. The team by November was ordering parts and waiting patiently on their arrival only to realize there was no method to how integrations would occur. The entire process seemed a little backwards. Moving forward, the team has found a way to hold each other accountable to the tasks that we are performing and hope to be more productive over the break and through the fall.
 \begin{figure}[H]
     \caption{Cumulative Flow Diagram from Jira}
     \centering
