--- a/research/technology.tex
+++ b/research/technology.tex
@@ -45,7 +45,9 @@ A developer can program applications such as those demonstrated in figure \ref{f
 
 One of the largest advantages to using and implementing Docker that the team sees is that one team member can program and package the image and it should ``just run'' on any other team member's machine. This fact will prove very useful in integration testing especially for the socket server detailed in Section \ref{sec:web_subsystem}.
 \paragraph{Elastic Compute Cloud}
-Amazon Web Services offers a service called called Elastic Compute Cloud (EC2).
+Amazon Web Services (AWS) offers a service called called Elastic Compute Cloud (EC2). EC2 is essentially a group of datacenters that provide virtual computing environments, Amazon refers to these as \textit{instances}. The entirety of AWS offers really simple ways to architecture the whole system. Because of the nature of instances, the team plans to also use the docker images from before and deploy straight to EC2.\\
+
+EC2 also takes out almost all the hassle with validation and security between systems due to the encapsulated nature of AWS. 
 \paragraph{User Interface}
 Because these are web technologies we will be using Javascript frontend frameworks/libraries for creating the frontend. Based upon cursory research, the most feature-rich and most widely used are React and VueJS.
 \subparagraph{React}
