--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -50,7 +50,7 @@ The linear voltage regulator schematic was designed to generate an output voltag
 \begin{figure}[H]
     \centering
     \caption{LM317 3.3V Linear Voltage Regulator}
-    \includegraphics[width=\textwidth]{images/LM317_3.3_schematic.png}
+    \includegraphics[width=\textwidth]{images/LM317_3_3_schematic.png}
     \label{fig:3.3V-linear-voltage-regulator}
 \end{figure}
 In Figure 41, we re-designed the ciruit get the regulated output voltage of approximately 5V for the sensors. This is done with the same circuit as for the 3.3 output voltage regulation, but the value R is now 720Ω with CADJ still remaining at 1uF. With these values that we found we achieved an output voltage of about 5V and the adjustment current of 5.2617mA.\par
