--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -1,71 +1,57 @@
 \subsection{Controller Subsystem Testing}
 \label{sec:controller_subsystem_testing}
-The MCU subsystem will undergo a littany of testing. The electrical
-characteristics, as well as hardware and software behavior will be tested to
+The MCU subsystem underwent a littany of testing. The electrical
+characteristics, as well as hardware and software behavior were tested to
 ensure a working product. Any use of "system" or "the system" in this section refers exclusively to, and the entirety of the MCU subsystem.
 
 % Electrical characteristics (to see what it can handle and what it uses)
 \subsubsection{Electrical Characteristics}
-The MCU subsystem shall adhere to the following electrical characteristics
+The MCU subsystem adheres to the following electrical characteristics
 related to power draw and voltage input in the following states. Unless noted,
 all voltages will be in direct current, and all conditions will be tested at
 room temperature (77 $\degree$F). 
 
-\paragraph{General Requirements} The system shall be able to accept a voltage
+\paragraph{General Requirements} The system is able to accept a voltage
 of -0.5 to 3.8 V into V\textsubscript{BAT}, -0.5 to 4.3 V into any digital
 IO-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
-into any analog-configured pin without damage. The system shall be able to
+into any analog-configured pin without damage. The system is able to
 accept a current of 0 to 620 mA into any pin without damage. The system shall
 be able to regulate voltage going into V\textsubscript{BAT}, and provide 3.3 $\pm$ 0.3 V
 on its 3V3 rail to any components in the sensing
 subsystem that may require it.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified via Texas Instruments' documentation.
 
-\paragraph{Operating Temperature} The system shall be able to operate
+\paragraph{Operating Temperature} The system is able to operate
 nominally within the temperature range of 30 to 140 $\degree$F. Crystal
 oscillators shall fall within the thermal drift ratings provided in the
 MCU technical reference material.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified via Texas Instruments' documentation.
 
 \paragraph{Shutdown Power Draw} The system shall not draw more than 10
 $\upmu$A in shut down mode. The system shall not consume more than 100
 $\upmu$W in shut down mode.
-\subparagraph{Results} TBD.
-
-\paragraph{Critical Power Draw} The system shall not draw more than 1 mA in
-critical power mode. The system shall not consume more than 5 mW in critical
-power mode.
-\subparagraph{Results} TBD.
-
-\paragraph{Low Power Draw} The system shall not draw more than 100 mA while
-receiving or idling in low power mode, and shall not draw more than 250
-mA while transmitting in low power mode. The system shall not consume more
-than 500 mW while receiving or idling in low power mode, and shall not
-consume more than 1.25 W while transmitting in low power mode. The system
-shall be able to sufficiently power any components in the sensing subsystem in
-low power mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Because power is completely cut off to the system to initiate shutdown mode, no power is drawn from the system. This has been verified.
 
 \paragraph{Active Power Draw} The system shall not draw more than 150 mA while
 receiving or idling in active mode, and shall not draw more than 300
 mA while transmitting in active mode. The system shall not consume more
 than 750 mW while receiving or idling in active mode, and shall not
 consume more than 1.50 W while transmitting in active mode. The system
-shall be able to sufficiently power any components in the sensing subsystem in
+is able to sufficiently power any components in the sensing subsystem in
 active mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} The system is able to sufficiently power other components and subsystems during normal operation.
 
 \paragraph{Startup Power Draw} The system shall not draw more than 750 mA
 within the first 20 seconds of powering on or starting up the system. The
 system shall not consume more than 4.00 W within the first 20 seconds of
 powering on or starting up the system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Unverified.
 
-\paragraph{Solar Panels and Battery System} The system shall be able to
+\paragraph{Solar Panels and Battery System} The system is able to
 operate nominally solely powered off of the solar and battery subsystem
 detailed in \autoref{sec:power_subsystem}. The system shall not require any
 external power to operate in any modes (e.g. startup, active, etc.).
-\subparagraph{Results} TBD.
+\subparagraph{Results} Moot, as our product moved to being an AC-line powered system.
 
 % Hardware behavior (ability to set and use peripherals n stuff)
 \subsubsection{Hardware Behavior}
@@ -75,67 +61,56 @@ programming developed and test the below criteria will be intended to only
 perform testing on the below modules, and may or may not be present in the
 product software build.
 
-\paragraph{Upload Programming} The developers shall be able to successfully
+\paragraph{Upload Programming} The developers is able to successfully
 upload programming (software) that meets the requirements detailed in
-\autoref{sec:controller_subsystem}. The developers shall be able to
+\autoref{sec:controller_subsystem}. The developers is able to
 successfully upload programming that allows and/or performs unit testing
 (as detailed in this section, \autoref{sec:controller_subsystem_testing}).
 Programming uploaded to the MCU shall execute either upon powering the
 system, upon command, or when executing an ISR to start up the system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
 
-\paragraph{I2C} The developers shall be able to initialize I2C. I2C shall
+\paragraph{I2C} The developers is able to initialize I2C. I2C shall
 function nominally if used for communication with any other modules in the
 overall garden bed system.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
 
-\paragraph{Onboard LEDs} The system shall be able to make use of its onboard
+\paragraph{Onboard LEDs} The system is able to make use of its onboard
 LEDs for notifying the user or developers of system states according to the specification in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Watchdog Timer} The developers shall be able to initialize the
-watchdog timer. The watchdog timer shall behave according to the specification in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
 
 \paragraph{WiFi Module} The WiFi module shall conform to the 802.11b/g/n
-standards. The developers shall be able to configure the WiFi
+standards. The developers is able to configure the WiFi
 module to support 802.11b, 802.11g, or 802.11n in WiFi station mode.  The 
-developers shall be able to configure the WiFi module to support 802.11b, or
+developers is able to configure the WiFi module to support 802.11b, or
 802.11g in WiFi Direct mode. The WiFi module shall allow the system to
 connect to either an open WLAN, or a WLAN secured by WPA2 (Personal or
 Enterprise). While
-connected, the WiFi module shall be capable of sending and receiving
+connected, the WiFi module is capable of sending and receiving
 data at speeds of at least 10 kbps at least 80\% of the time.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
 
-\paragraph{GPIO} The developers shall be able to configure the GPIO pins to
+\paragraph{GPIO} The developers is able to configure the GPIO pins to
 the configurations available as described by technical reference documentation.
-The developers shall be able to set the state of the desired GPIO pins to
+The developers is able to set the state of the desired GPIO pins to
 the configurations available as described by technical reference documentation.
 \subparagraph{Results} The developers are able to configure GPIO pins to the configurations available as described by technical reference documentation via the Texas Instruments \href{https://www.ti.com/tool/SYSCONFIG}{SYSCONFIG} system configuration tool.
 
-\paragraph{Interrupts/ISRs} The developers shall be able to configure
+\paragraph{Interrupts/ISRs} The developers is able to configure
 the interrupts available on the MCU as described by technical reference
 documentation to trigger an ISR of their choice. ISRs shall run within 1 second
 of triggering the interrupt linked to the specific ISR. An empty ISR shall
 return the MCU to its previous state before the interrupt (i.e. clear any
 flags and return any registers to their previous state).
-\subparagraph{Results} TBD.
+\subparagraph{Results} The developer is able to configure and trigger interrupts---though, interrupts ended up not being used.
 
-\paragraph{ADC} The developers shall be able to configure the ADC on the MCU
-to adhere to the parameters described in the technical reference documentation.
-The ADC shall be able to measure signals with a voltage of between 0 and 1.8 V.
-The ADC shall be able to accurately measure a voltage level down to a
-resolution of $\leq$1 mV. The ADC shall be able to measure at a sampling rate
+\paragraph{ADC} The developers is able to configure the ADC on the to adhere to the parameters described in the technical reference documentation.
+The ADC is able to measure signals with a voltage of between 0 and 3.3 V.
+The ADC is able to accurately measure a voltage level down to a
+resolution of $\leq$1 mV. The ADC is able to measure at a sampling rate
 of $\geq$50 kilosamples per second per channel. The ADC shall support
-conversion on up to 4 channels. The ADC shall support the ablility to timestamp
-samples with the clock mentioned by the technical reference documentation.
-\subparagraph{Results} TBD.
-
-\paragraph{Reset Button} The reset button shall be able to "power cycle" the system. The reset button shall not erase
-any programming uploaded to the MCU. The reset button shall not keep the
-system from starting for more than 1 second after the button has been released.
-\subparagraph{Results} The reset button "power cycles" the system, does not erase any programming uploaded to the MCU, and does not keep the system from starting for more than 1 second after the button has been released.
+conversion on up to 2 channels. 
+\subparagraph{Results} Verified.
 
 \paragraph{Startup} The system shall not take longer than 10 seconds to begin
 its programming upon sufficient power delivery to the MCU as described by
@@ -153,7 +128,7 @@ least a 20 MHz clock speed while in active mode.
 
 \paragraph{Memory} The programming uploaded to the MCU shall not take up
 more than 64 KB of space in memory.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
 
 % Software behavior (actual program)
 \subsubsection{Software Behavior} The MCU subsystem shall pass the following
@@ -161,16 +136,16 @@ tests related to use of the MCU to support application of the product. The
 programming developed and test the below criteria is intended to be the
 product software build.
 
-\paragraph{Startup} The microcontroller shall behave according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
-\subparagraph{Results} TBD.
+\paragraph{Startup} The microcontroller ishave according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
+\subparagraph{Results} Verified.
 
-\paragraph{Shutdown} The microcontroller shall behave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
-\subparagraph{Results} TBD.
+\paragraph{Shutdown} The microcontroller ishave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
+\subparagraph{Results} Verified.
 
-\paragraph{Reset} The microcontroller shall behave according to the specifications on reset in \autoref{sec:controller_subsystem} during its reset sequence.
-\subparagraph{Results} TBD.
+\paragraph{Reset} The microcontroller ishave according to the specifications on reset in \autoref{sec:controller_subsystem} during its reset sequence.
+\subparagraph{Results} Verified.
 
-\paragraph{Networking} The system shall be able to connect to the user's WLAN if it meets the following standards:
+\paragraph{Networking} The system is able to connect to the user's WLAN if it meets the following standards:
 \begin{itemize}
     \item A 2.4 GHz-based wireless network
     \item Contains no security or is secured with WPA2 (Personal or Enterprise)
@@ -181,16 +156,4 @@ product software build.
     \item Provides DNS to LAN devices
     \item Able to resolve and successfully connect to \texttt{8.8.8.8} and \texttt{google.com} within 5 seconds
 \end{itemize}
-\subparagraph{Results} TBD.
-
-\paragraph{AWS} The microcontroller shall behave according to the specifications on connecting to and communicating with AWS in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Sockets} The microcontroller shall behave according to the specifications on sockets in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Solar and Battery} The system shall monitor and update the solar array current and voltage output values at least every 10 seconds. The system shall behave according to the specifications on power modes and battery percentages in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} TBD.
-
-\paragraph{Sensing} The system shall monitor and perform analog-to-digital conversion on the spectroscopic sensor values at least every 10 seconds while not in shutdown or critical power mode.
-\subparagraph{Results} TBD.
+\subparagraph{Results} Verified.
